# coldcraft

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Adding knowledge-work-plugins skill - Claude.htm  Dockerfile  MAILER_CONSTITUTION.md  PLAN.md  README.md  SCREENS_SPEC.md  __init__.py  agent.py  architecture.skill  claude-progress.md  clean-state-checklist.md  docker-compose.yml  drafter.py  feature_list.json  heroku.yml  init.sh  pyproject.toml  railway.toml  requirements.txt  session-handoff.md  smtp_client.py  system-design.skill  tracker.py  validators.py  vercel.json
Adding knowledge-work-plugins skill - Claude_files/: c6a992d55-Cf46MKPS.css  controller-with-preconnect-0f886d6e61ca23e7edf1740e8bf1166f.js  controller-with-preconnect-cbf4426000706f22dae352b04e003c31.html  icom.html  inner.html  iui.html  m-outer-3437aaddcdf6922d623e172c2d6f9278.html  mcp_apps(1).html  mcp_apps(2).html  mcp_apps(3).html  mcp_apps(4).html  mcp_apps(5).html  mcp_apps(6).html  mcp_apps(7).html  mcp_apps.html  saved_resource(1).html  saved_resource(2).html  saved_resource(3).html  saved_resource(4).html  saved_resource(5).html  saved_resource(6).html  saved_resource(7).html  saved_resource(8).html  saved_resource.html  shared-cdfd8a178ac170391de7ae02568052a7.js  stripe.js
application/: __init__.py  ports.py  use_cases.py
coldcraft/: __init__.py  agent.py  drafter.py  latex.py  llm.py  resume_ai.py  smtp_client.py  tracker.py
config/: secrets.py
domain/: __init__.py  errors.py  models.py  policies.py
frontend/: .env.example  index.html  package-lock.json  package.json  (+2 more)
(+110 files in other folders)
